# fe

./: Cargo.toml  Makefile  fe.toml  release.toml  torage.set(key: key, value: new_value)
crates/fe/: Cargo.toml
crates/fe/src/: check.rs  main.rs  tree.rs  workspace_ingot.rs
crates/fe/src/test/: mod.rs
crates/fe/tests/: cli_output.rs  fmt_semantic_roundtrip.rs
crates/mir/: Cargo.toml
crates/mir/src/: core_lib.rs  dedup.rs  fmt.rs  hash.rs  ir.rs  layout.rs  lib.rs  lower.rs  monomorphize.rs  transform.rs  ty.rs
crates/mir/src/analysis/: call_graph.rs
crates/mir/src/ir/: body_builder.rs
crates/mir/src/lower/: aggregates.rs  contract.rs  diagnostics.rs  expr.rs  intrinsics.rs  match_lowering.rs  mod.rs  prepass.rs  variants.rs
crates/mir/tests/: extern_generic_calls.rs  lowering_snapshots.rs  trait_default_ne.rs
crates/mir/tests/fixtures/: abi_decode.fe  abi_decode.mir.snap  borrow_handles.fe  borrow_handles_readback.fe  borrowck_const_index_disjoint.fe  borrowck_field_disjoint.fe  by_ref_trait_effect_provider.fe  const_hole_storage_map_contract_defaults.fe  contract_field_layout_slots_const_hole.fe  create2_zero_arg_cleanup.mir.snap  echo.mir.snap  echo.snap  for_continue.fe  kitchen_sink.fe  kitchen_sink.mir.snap  mixed_trait_type_effects.fe  move_reinit.fe  mut_self_transparent_newtype.fe  range_bounds.fe  range_bounds.mir.snap  trait_assoc_fn_call.fe  trait_assoc_fn_call.mir.snap  trait_default_method.fe  trait_default_method.mir.snap  transient_field_effects.fe  while_cond_call.mir.snap  zst_load_index_eval.fe  zst_load_index_eval.mir.snap
(+1562 files in other folders)
