[package]
name = "fe"
version = "0.26.0"
edition.workspace = true

[dependencies]
clap.workspace = true
driver.workspace = true
tracing.workspace = true
common.workspace = true
resolver.workspace = true
camino.workspace = true
url.workspace = true

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
