[package]
name = "fe"
version = "0.26.0"
edition.workspace = true

[dependencies]
clap.workspace = true
driver.workspace = true
tracing.workspace = true
common.workspace = true
resolver.workspace = true
camino.workspace = true
url.workspace = true
smol_str.workspace = true
hir.workspace = true
mir.workspace = true
cranelift-entity.workspace = true
codegen = { path = "../codegen", package = "fe-codegen" }

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
