[package]
name = "fe-mir"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Placeholder MIR layer for the Fe compiler rewrite"

[lib]
doctest = false

[dependencies]
hir.workspace = true
hir-analysis.workspace = true
common.workspace = true
